# pytest-genai-semconv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pytest_genai_semconv/: __init__.py  assertions.py  golden.py  plugin.py  spec.py  testing.py
tests/: test_accessor_edge_cases.py  test_assertions.py  test_golden_fixtures.py  test_plugin.py  test_spec.py  test_type_validation.py
